# fuzz-reachability

./: .gitignore  Changelog.md  Makefile  README.md  dangerous_functions.txt  requirements-dev.txt
.github/workflows/: tests.yml
analyzer/: Makefile
analyzer/src/: CallGraph.cpp  CallGraph.h  CovLists.cpp  CovLists.h  Demangle.cpp  Demangle.h  DotExport.cpp  DotExport.h  IndirectResolver.h  JsonReport.cpp  JsonReport.h  Metrics.cpp  Metrics.h  Module.cpp  Module.h  Reachability.cpp  Reachability.h  SVFResolver.cpp  SVFResolver.h  SymbolKey.cpp  SymbolKey.h  Text.h  Toolchain.cpp  Toolchain.h  TypeBasedResolver.cpp  TypeBasedResolver.h  main.cpp
analyzer/test/: alias_chain.ll  callback_load.ll  entry_confidence.ll  entry_resolve.ll  escape_stores.ll  external_decl.ll  fnptr.ll  indirect_external.ll  invalid_utf8.ll  lifecycle.ll  (+7 more)
docs/: EXAMPLES.md  llvm-support.md  svf-notes.md  ziggy.md
driver/: pyproject.toml
driver/reachability/: acquire_c.py  acquire_rust.py  analyze.py  cli.py  diagnostics.py  errors.py  link.py  outputs.py  report.py  toolchain.py
driver/tests/: conftest.py  test_acquire_c.py  test_acquire_rust.py  test_analyze.py  test_analyzer_core.py  test_cli.py  test_covlists.py  test_diagnostics.py  test_link.py  test_reachable_sets.py  test_report.py  test_rust_hash_stability.py  test_soundness_property.py  test_toolchain.py  test_v0_mangling_probe.py
examples/cpp_cmake/: CMakeLists.txt
examples/cpp_cmake/src/: target.cpp
scripts/: build_svf.sh  ci_cross_repo.sh  gen_dangerous_list.sh  select_llvm.sh  setup.sh  setup_venv.sh  test_matrix.sh
(+39 files in other folders)
