[project]
name = "reachability"
dynamic = ["version"]
description = "Static fuzz-reachability analyzer driver (C/C++/Rust @ LLVM IR)"
requires-python = ">=3.12"

[project.scripts]
reachability = "reachability.cli:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["reachability"]

[tool.setuptools.dynamic]
version = {attr = "reachability.__version__"}
